--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="http://fonts.googleapis.com/css?family=Work Sans:100,300,400,500,800" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Work Sans:100,300,400,500,800" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="resources/css/style.css" />
 
     <!--FAVICONS-->
